Try to fix style on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,6 @@ html {
 	--names-height: 12ch;
 	--timestamps-width: 5ch;
 	--nav-height: 3rem;
-
-	background-color: black;
 }
 
 body {
